[package]
name = "ipc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.61"
async-std = "1.12.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde_json = "1.0.91"
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }