[workspace.package]
name = "ipc-agent"
version = "0.1.0"
repository = "https://github.com/consensus-shipyard/ipc-agent"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "agent",
    "utils/jsonrpc"
]

[workspace.dependencies]
cargo-husky = {version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]}
