[package]
name = "ipc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-channel = "1.8.0"
async-trait = "0.1.61"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.91"
serde = "1.0.152"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
tokio = { version = "1.16", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
derive_builder = "0.12.0"
num-traits = "0.2.15"
fvm_shared = {workspace = true}
fil_actors_runtime = {workspace = true}
env_logger = "0.10.0"
base64 = "0.21.0"

[workspace.dependencies]
fvm_shared = { version = "=3.0.0-alpha.17", default-features = false }
fil_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", features = ["fil-actor"] }