[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.0", features = ["full"] }
warp = "0.3.3"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"
clap = {version = "4.1.4", features = ["env", "derive"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.17"
serde_json = "1.0.91"
bytes = "1.3.0"
lazy_static = "1.4.0"
async-trait = "0.1.63"
reqwest = { version = "0.11", features = ["json"] }
paste = "1.0.11"